1-Se hicieron modulos de insertar, actualizar y eliminar en pantallas de medicos, pacientes y usuarios. 2- Se validaron menus y apartados de cada pantalla segun el rol del usuario logueado

--- a/Views/Citas/Index.cshtml
+++ b/Views/Citas/Index.cshtml
@@ -51,6 +51,13 @@
                             <div class="btn-group">
                                 <a asp-action="Editar" asp-route-id="@item.IdCita" class="btn btn-sm btn-outline-primary"><i class="bi bi-pencil"></i></a>
                                 <button class="btn btn-sm btn-outline-danger"><i class="bi bi-trash"></i></button>
+                                @if (User.IsInRole("Medico") || User.IsInRole("Admin"))
+                                {
+                                    <a asp-action="Editar" asp-route-id="@item.IdCita" class="btn btn-sm btn-outline-primary"><i class="bi bi-pencil"></i></a>
+
+                                }
+
+
                             </div>
                         </td>
                     </tr>
